--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") %>
 <div style=" margin:50px auto" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
 	<h1 style="text-align:center">
-		SignUp to YelpCamp
+		SignUp to GoCampers
 	</h1>
    <form action="/register" method="POST">
 	<input class="logsign d-flex form-control d-lg-block" type="text" placeholder="username" name="username"><br>
