--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <div style=" margin:50px auto" class="col-lg-6 col-md-12 col-sm-12 col-xs-12 authentication">
  <h1 style="text-align:center">
-	LogIn to YelpCamp
+	LogIn to GoCampers
  </h1>
   <form action="/login" method="POST">
 	<input class="logsign d-flex form-control d-lg-block " type="text" placeholder="username" name="username"><br>
